Fixed scaling bug

--- a/index.html
+++ b/index.html
@@ -102,17 +102,20 @@
 		<div class="three">	
 			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
 				<figure>
-					<a href="single.html"><img src="images/pic_5.jpg" alt="Image" class="img-responsive"></a>
-				</figure>
+					<a href="single.html"><img src="images/pic_5.jpg" alt="Image" class="img-responsive" style="height: 202px;
+   					 width: 272px;"></a>
+				
 				<div id="small-box" class="col-lg-9 col-md-12 col-sm-3 col-xs-6 col-xxs-12">
 					<span class="small-author"><i class="fa fa-video-camera" aria-hidden="true"></i> &nbsp;&nbsp;BY MALCOLM MERLYN</span>
 					<h2 class="small-title"><a href="single.html">Why your need to fly cheap just created a new aerospace giant</a></h2>
 				</div>
+				</figure>
 			</article>
 			
 			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
 				<figure>
-					<a href="single.html"><img src="images/pic_6.jpg" alt="Image" class="img-responsive"></a>
+					<a href="single.html"><img src="images/pic_6.jpg" alt="Image" class="img-responsive" style="height: 202px;
+   					 width: 272px;"></a>
 				</figure>
 				<div id="small-box" class="col-lg-9 col-md-12 col-sm-3 col-xs-6 col-xxs-12">
 					<span class="small-author"><i class="fa fa-newspaper-o" aria-hidden="true"></i> &nbsp;&nbsp;BY MALCOLM MERLYN</span>
@@ -123,7 +126,8 @@
 			
 			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
 				<figure>
-					<a href="single.html"><img src="images/pic_7.jpg" alt="Image" class="img-responsive"></a>
+					<a href="single.html"><img src="images/pic_7.jpg" alt="Image" class="img-responsive" style="height: 202px;
+   					 width: 272px;"></a>
 				</figure>
 				<div id="small-box" class="col-lg-9 col-md-12 col-sm-3 col-xs-6 col-xxs-12">
 					<span class="small-author"><i class="fa fa-newspaper-o" aria-hidden="true"></i> &nbsp;&nbsp;BY MALCOLM MERLYN</span>
@@ -133,9 +137,10 @@
 			
 			<article class="col-lg-3 col-md-3 col-sm-3 col-xs-6 col-xxs-12 animate-box">
 				<figure>
-					<a href="single.html"><img src="images/pic_1.jpg" alt="Image" class="img-responsive"></a>
+					<a href="single.html"><img src="images/pic_1.jpg" alt="Image" class="img-responsive" style="height: 202px;
+   					 width: 272px;"></a>
 				</figure>
-				<div id="small-box" class="col-lg-9 col-md-12 col-sm-3 col-xs-6 col-xxs-12">
+				<div id="small-box" class="col-lg-5 col-md-6 col-sm-3 col-xs-6 col-xxs-12">
 					<span class="small-author"><i class="fa fa-video-camera" aria-hidden="true"></i> &nbsp;&nbsp;BY MALCOLM MERLYN</span>
 					<h2 class="small-title"><a href="single.html">Why your need to fly cheap just created a new aerospace giant</a></h2>
 				</div>
